--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,4 +18,10 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
+  "include": [
+    "src/**/*.ts",
+  ],
+  "exclude": [
+    "scripts"
+  ]
 }
