--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npx nestia all && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,10 +22,15 @@
     "migration:generate": "./scripts/migration-generate.sh",
     "migration:run": "yarn ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d src/infra/typeorm/data-source.ts",
     "migration:revert": "yarn ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d src/infra/typeorm/data-source.ts",
-    "migration:show": "yarn ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:show -d src/infra/typeorm/data-source.ts"
-
+    "migration:show": "yarn ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:show -d src/infra/typeorm/data-source.ts",
+    "prepare": "ts-patch install"
   },
   "dependencies": {
+    "@nestia/core": "^7.1.1",
+    "@nestia/e2e": "^7.1.1",
+    "@nestia/fetcher": "^7.1.1",
+    "@nestia/sdk": "^7.1.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -34,23 +39,31 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "cache-manager": "^7.0.1",
+    "ioredis": "^5.4.2",
+    "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "typia": "^9.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@grafana/openapi-to-k6": "^0.3.2",
+    "@nestia/benchmark": "^7.1.1",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.10.7",
+    "@types/cache-manager": "^5.0.0",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/kafkajs": "^1.9.0",
     "@types/node": "^24.0.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
@@ -58,14 +71,16 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.3",
+    "nestia": "^7.1.1",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
+    "ts-patch": "^3.3.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
